--- a/playbooks/roles/setup-snowflake/defaults/main.yaml
+++ b/playbooks/roles/setup-snowflake/defaults/main.yaml
@@ -1,5 +1,4 @@
 ---
 snowflake_git_version: "HEAD"
-snowflake_patch_base: ""
+snowflake_patch_base: "{{ snowflake_git_version }}"
 snowflake_patches: []
-snowflake_patched_systems: []
