filter ipv6 too

--- a/playbooks/roles/setup-snowflake/tasks/firewall.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/firewall.yaml
@@ -1,11 +1,16 @@
 ---
 - name: ACCEPT incoming UDP to (ephemeral ports of) Snowflake
   ansible.builtin.iptables:
+    ip_version: "{{ 'ip' + item }}"
     chain: INPUT
+    table: filter
     protocol: udp
-    destination: "{{ ansible_facts.default_ipv4.address }}"
+    destination: "{{ (item == 'v4') | ternary(ansible_facts.default_ipv4.address, ansible_facts.default_ipv6.address) }}"
     destination_ports: "32768:60999" # /proc/sys/net/ipv4/ip_local_port_range
     jump: ACCEPT
+  with_items:
+    - "v4"
+    - "v6"
 
 - name: Enable Prometheus to scrape metrics
   when: (prometheus_server is defined) and (prometheus_server is ansible.utils.ipv4) and (metrics_port is defined) and (metrics_port | int > 0) and (metrics_port | int < 2**16)
@@ -35,8 +40,11 @@
         sysctl_file: /etc/sysctl.d/21tor-snowflake.conf
         sysctl_set: true
 
-- name: Save new iptables v4 state
+- name: Save new iptables
   community.general.iptables_state:
-    ip_version: ipv4
+    ip_version: "{{ 'ip' + item }}"
     state: saved
-    path: /etc/iptables/rules.v4
+    path: "{{ '/etc/iptables/rules.' + item }}"
+  with_items:
+    - "v4"
+    - "v6"
