--- a/playbooks/setup.yaml
+++ b/playbooks/setup.yaml
@@ -4,12 +4,16 @@
     - all
   roles:
     - role: setup
+  tags:
+    - setup
 
 - name: Setup Snowflake
   hosts:
     - snowflake
   roles:
     - role: setup-snowflake
+  tags:
+    - setup-snowflake
 
 - name: Setup Tor
   hosts:
@@ -17,3 +21,5 @@
     - private
   roles:
     - role: setup-tor
+  tags:
+    - setup-tor
