--- a/playbooks/roles/info-snowflake/tasks/version.yaml
+++ b/playbooks/roles/info-snowflake/tasks/version.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Tor version
+- name: Snowflake version
   changed_when: false
   ansible.builtin.shell: >-
     /usr/bin/proxy --version 2>&1 | cut -f 2- -d ' '
@@ -13,14 +13,21 @@
   ansible.builtin.command: git describe --tags --always --long --dirty # noqa: command-instead-of-module
   args:
     chdir: "{{ snowflake_repo_dir }}"
-  register: __snowflake_version
-  failed_when: __snowflake_version.stdout_lines | length != 1 or __snowflake_version.stderr_lines | length > 0
+  register: _git_version
+  failed_when: _git_version.stdout_lines | length != 1 or _git_version.stderr_lines | length > 0
+
+- name: Go version
+  changed_when: false
+  ansible.builtin.shell: >-
+    go version 2>&1 | cut -f 3 -d ' '
+  register: _go_version
+  failed_when: _go_version.stdout_lines | length != 1 or _go_version.stderr_lines | length > 0
 
 - name: File results for version
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
     create: yes
-    line: "{{ ansible_facts.hostname }} {{ _proxy_version.stdout_lines[0] }} {{ __snowflake_version.stdout_lines[0] }}"
+    line: "{{ ansible_facts.hostname }} {{ _proxy_version.stdout_lines[0] }} {{ _git_version.stdout_lines[0] }} {{ _go_version.stdout_lines[0] }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_version"
     regex: "^{{ ansible_facts.hostname }} "
