--- a/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
@@ -72,6 +72,7 @@
   register: __service
 
 - name: Restart Snowflake service
+  throttle: 1
   ansible.builtin.service:
     name: snowflake-proxy
     state: restarted
