--- a/playbooks/roles/info-tor/tasks/uptime.yaml
+++ b/playbooks/roles/info-tor/tasks/uptime.yaml
@@ -8,7 +8,7 @@
   changed_when: false
   ansible.builtin.command: "uptime -ps"
   register: result
-  failed_when: result.stdout_lines | length != 1 or result.stderr_lines | length > 0
+  failed_when: (result.stdout_lines | length != 1) or (result.stderr_lines | length > 0)
 
 - name: File results for uptime
   delegate_to: localhost
