--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -48,13 +48,13 @@
   ansible.builtin.copy:
     src: 20tor-system.conf
     dest: /etc/sysctl.d/
-  register: sysctl_state
+  register: _sysctl_state
 
 - name: "Ensure sysctl is reloaded"
   changed_when: true
   ansible.builtin.command:
     argv: ["sysctl", "--system"]
-  when: sysctl_state.changed
+  when: _sysctl_state.changed
 
 - name: Tweak readline
   ansible.builtin.lineinfile:
@@ -91,18 +91,10 @@
     special_time: reboot
     job: "echo '/tmp/core.\\%e.\\%p.\\%s.\\%t' > /proc/sys/kernel/core_pattern"
 
-- name: Gather the package facts
-  ansible.builtin.package_facts:
-    manager: auto
-
-- name: Get current running kernel version
-  changed_when: false
-  check_mode: false
-  ansible.builtin.shell: |
-    uname -v | grep -Eo '(Debian .*) ' | awk '{ print $2 }'
-    uname -r | cut -f 3 -d '-'
-  register: _uname
-  failed_when: (_uname.stdout_lines | length != 2) or (_uname.stderr_lines | length > 0)
+- name: Check if reboot is required
+  ansible.builtin.stat:
+    path: /var/run/reboot-required
+  register: _stat_reboot
 
 - name: Reboot into newer kernel if needed
   ansible.builtin.reboot:
@@ -110,6 +102,4 @@
     reboot_timeout: 120
     pre_reboot_delay: 0
     post_reboot_delay: 35
-  when: _uname.stdout_lines[0] != ansible_facts.packages[linux_image_arch][0].version
-  vars:
-    linux_image_arch: "linux-image-{{ _uname.stdout_lines[1] }}"
+  when: _stat_reboot.stat.exists
