--- a/playbooks/roles/info-snowflake/tasks/log-proxy.yaml
+++ b/playbooks/roles/info-snowflake/tasks/log-proxy.yaml
@@ -4,10 +4,10 @@
   ansible.builtin.shell: >-
     journalctl -u snowflake-proxy --since "{{ log_proxy_since }}" -q |
     grep -v -e  ', there were .* connections' -e ': sctp ERROR: .* stream 1 not found' -e ' Proxy connection closed'
-  register: result
-  failed_when: result.stderr_lines | length > 0
+  register: _result
+  failed_when: _result.stderr_lines | length > 0
 
 - name: Results of log-proxy since {{ log_proxy_since }}
   ansible.builtin.debug:
-    msg: "{{ result.stdout.split('\n') }}"
-  when: result.stdout_lines | length > 0
+    msg: "{{ _result.stdout.split('\n') }}"
+  when: _result.stdout_lines | length > 0
