--- a/playbooks/roles/info-tor/tasks/log-err.yaml
+++ b/playbooks/roles/info-tor/tasks/log-err.yaml
@@ -3,10 +3,10 @@
   changed_when: false
   ansible.builtin.shell: >-
     grep -h -v -e 'opening .*log file.' {{ log_err }}.1 {{ log_err }} 2>/dev/null
-  register: result
-  failed_when: result.stderr_lines | length > 0
+  register: _result
+  failed_when: _result.stderr_lines | length > 0
 
 - name: Results of error log check
   ansible.builtin.debug:
-    msg: "{{ result.stdout.split('\n') }}"
-  when: result.stdout_lines | length > 0
+    msg: "{{ _result.stdout.split('\n') }}"
+  when: _result.stdout_lines | length > 0
