--- a/playbooks/roles/info-tor/tasks/version.yaml
+++ b/playbooks/roles/info-tor/tasks/version.yaml
@@ -9,14 +9,14 @@
     tor --version |
     grep -m 1 '^Tor version' |
     awk '{ print $3 }'
-  register: result
-  failed_when: (result.stdout_lines | length != 1) or (result.stderr_lines | length > 0)
+  register: _result
+  failed_when: (_result.stdout_lines | length != 1) or (_result.stderr_lines | length > 0)
 
-- name: File results for version
+- name: File _results for version
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
     create: yes
-    line: "{{ ansible_facts.hostname }} {{ ansible_facts.packages['tor'][0].version }} {{ ansible_facts.packages['obfs4proxy'][0].version }} {{ result.stdout_lines[0] }}"
+    line: "{{ ansible_facts.hostname }} {{ ansible_facts.packages['tor'][0].version }} {{ ansible_facts.packages['obfs4proxy'][0].version }} {{ _result.stdout_lines[0] }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_version"
     regex: "^{{ ansible_facts.hostname }} "
