--- a/playbooks/roles/info/tasks/firewall.yaml
+++ b/playbooks/roles/info/tasks/firewall.yaml
@@ -3,27 +3,27 @@
   changed_when: false
   ansible.builtin.shell: >-
     conntrack -S | grep -v ' insert_failed=0 drop=0 ' | awk '{ print $1, $5, $6 }' | cut -f 2- -d ':' | xargs
-  register: result
+  register: _result
 
-- name: File results for Firewall ct drops
+- name: File _results for Firewall ct drops
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
     create: yes
-    line: "{{ ansible_facts.hostname }} {{ result.stdout }}"
+    line: "{{ ansible_facts.hostname }} {{ _result.stdout }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_firewall_ct_drops"
     regex: "^{{ ansible_facts.hostname }} "
 
 - name: Firewall ct counter
   changed_when: false
   ansible.builtin.command: conntrack -C
-  register: result
+  register: _result
 
-- name: File results for Firewall ct counter
+- name: File _results for Firewall ct counter
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
     create: yes
-    line: "{{ ansible_facts.hostname }} {{ result.stdout }}"
+    line: "{{ ansible_facts.hostname }} {{ _result.stdout }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_firewall_ct_counter"
     regex: "^{{ ansible_facts.hostname }} "
