--- a/playbooks/roles/info/tasks/log-unattended.yaml
+++ b/playbooks/roles/info/tasks/log-unattended.yaml
@@ -3,9 +3,9 @@
   changed_when: false
   ansible.builtin.shell: |
     grep -v -e 'Reading database' -e '^$' {{ log_unattended }} | tail -n {{ log_lines }}
-  register: result
+  register: _result
 
 - name: Findings of log-unattended {{ log_lines }} last lines
   ansible.builtin.debug:
-    msg: "{{ result.stdout.split('\n') }}"
-  when: result.stdout_lines | length > 0
+    msg: "{{ _result.stdout.split('\n') }}"
+  when: _result.stdout_lines | length > 0
