--- a/playbooks/roles/info/tasks/uname.yaml
+++ b/playbooks/roles/info/tasks/uname.yaml
@@ -2,13 +2,13 @@
 - name: Uname
   changed_when: false
   ansible.builtin.command: "uname -rv"
-  register: result
+  register: _result
 
-- name: File results for uname
+- name: File _results for uname
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
     create: yes
-    line: "{{ ansible_facts.hostname }} {{ result.stdout }}"
+    line: "{{ ansible_facts.hostname }} {{ _result.stdout }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_uname"
     regex: "^{{ ansible_facts.hostname }} "
