--- a/playbooks/roles/info/tasks/metrics-port.yaml
+++ b/playbooks/roles/info/tasks/metrics-port.yaml
@@ -1,5 +1,5 @@
 ---
-- name: File _results for Tor metrics port
+- name: File Tor metrics port
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
@@ -7,9 +7,9 @@
     line: "{{ ansible_facts.hostname}}:{{ metrics_port }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_metrics_port"
     regex: "^{{ ansible_facts.hostname }}:"
-  when: (metrics_port is defined) and (metrics_port | int > 0) and (metrics_port | int < 2**16)
+  when: (metrics_port | int > 0) and (metrics_port | int < 2**16)
 
-- name: File _results for Prometheus node exporter metrics port
+- name: File Prometheus node exporter metrics port
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
@@ -17,4 +17,4 @@
     line: "{{ ansible_facts.hostname }}:9100"
     path: "{{ tmp_dir }}/node_metrics_port"
     regex: "^{{ ansible_facts.hostname }}:"
-  when: (prometheus_node_exporter is defined) and (prometheus_node_exporter is true)
+  when: prometheus_node_exporter is true
