--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -1,2 +1,8 @@
 ---
+# metrics
+metrics_port: 0
+prometheus_node_exporter: false
+prometheus_server: ""
+
+# lcoal tmp directory
 tmp_dir: "{{ lookup('env', 'HOME') }}/tmp"
