--- a/playbooks/roles/info-tor/tasks/bto.yaml
+++ b/playbooks/roles/info-tor/tasks/bto.yaml
@@ -6,7 +6,7 @@
     status_code: [200, 404, 503]
   register: _result
 
-- name: File _results for bto
+- name: File bto
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
