--- a/playbooks/roles/info-tor/tasks/version.yaml
+++ b/playbooks/roles/info-tor/tasks/version.yaml
@@ -12,7 +12,7 @@
   register: _result
   failed_when: (_result.stdout_lines | length != 1) or (_result.stderr_lines | length > 0)
 
-- name: File _results for version
+- name: File version
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
