--- a/playbooks/roles/info/tasks/firewall.yaml
+++ b/playbooks/roles/info/tasks/firewall.yaml
@@ -5,7 +5,7 @@
     conntrack -S | grep -v ' insert_failed=0 drop=0 ' | awk '{ print $1, $5, $6 }' | cut -f 2- -d ':' | xargs
   register: _result
 
-- name: File _results for Firewall ct drops
+- name: File Firewall ct drops
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
@@ -19,7 +19,7 @@
   ansible.builtin.command: conntrack -C
   register: _result
 
-- name: File _results for Firewall ct counter
+- name: File Firewall ct counter
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
