implement unstable kernel install logic

--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -6,3 +6,5 @@ prometheus_server: ""
 
 # local directory for site-info files
 tmp_dir: "{{ lookup('env', 'HOME') }}/tmp"
+
+unstable_kernel_version: ""
