--- a/playbooks/roles/setup/tasks/prometheus-node-exporter.yaml
+++ b/playbooks/roles/setup/tasks/prometheus-node-exporter.yaml
@@ -34,4 +34,4 @@
         name: "prometheus-node-exporter"
         state: restarted
         daemon_reload: true
-        enabled: yes
+        enabled: true
